--- a/roboshop-project/makefile
+++ b/roboshop-project/makefile
@@ -12,5 +12,5 @@ user: common
 	@sh components/user.sh
 cart: common
 	@sh components/cart.sh
-cart: common
+mysql: common
 	@sh components/mysql.sh
